[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/image/Logo.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Atma/Atma-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/2d map_list/map_list_page.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_color = Color( 0.929412, 0.733333, 0.0117647, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="map_list_page" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 270.0 ],
"_edit_vertical_guides_": [ 480.0, 202.0, 723.0 ]
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0.760784, 0.796078, 1 )

[node name="Logo" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 238.0
margin_top = 76.0
margin_right = 727.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 3 )
text = "CHOOSE MAP & SKIN BALL"

[node name="Map Mountain" type="VBoxContainer" parent="."]
anchor_bottom = 0.788
margin_left = 62.0
margin_top = 179.0
margin_right = 343.0
margin_bottom = 499.0

[node name="btn_training_1_player" type="Button" parent="Map Mountain"]
margin_right = 281.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mountain - Billiard"

[node name="btn_training_1_player2" type="Button" parent="Map Mountain"]
margin_top = 54.0
margin_right = 281.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mountain - Bulan"

[node name="btn_training_1_player3" type="Button" parent="Map Mountain"]
margin_top = 108.0
margin_right = 281.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mountain - Golf"

[node name="btn_training_1_player4" type="Button" parent="Map Mountain"]
margin_top = 162.0
margin_right = 281.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mountain - Soccer"

[node name="btn_training_1_player5" type="Button" parent="Map Mountain"]
margin_top = 216.0
margin_right = 281.0
margin_bottom = 266.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mountain - Voly"

[node name="btn_training_1_player6" type="Button" parent="Map Mountain"]
margin_top = 270.0
margin_right = 281.0
margin_bottom = 320.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Mountain - World"

[node name="Map Fantasy" type="VBoxContainer" parent="."]
margin_left = 350.0
margin_top = 178.0
margin_right = 631.0
margin_bottom = 498.0

[node name="btn_fantasy_1_player" type="Button" parent="Map Fantasy"]
margin_right = 281.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Fantasy - Billiard"

[node name="btn_fantasy_1_player2" type="Button" parent="Map Fantasy"]
margin_top = 54.0
margin_right = 281.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Fantasy - Bulan"

[node name="btn_fantasy_1_player3" type="Button" parent="Map Fantasy"]
margin_top = 108.0
margin_right = 281.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Fantasy - Golf"

[node name="btn_fantasy_1_player4" type="Button" parent="Map Fantasy"]
margin_top = 162.0
margin_right = 281.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Fantasy - Soccer"

[node name="btn_fantasy_1_player5" type="Button" parent="Map Fantasy"]
margin_top = 216.0
margin_right = 281.0
margin_bottom = 266.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Fantasy - Voly"

[node name="btn_fantasy_1_player6" type="Button" parent="Map Fantasy"]
margin_top = 270.0
margin_right = 281.0
margin_bottom = 320.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Fantasy - World"

[node name="Map Home" type="VBoxContainer" parent="."]
margin_left = 640.0
margin_top = 177.0
margin_right = 921.0
margin_bottom = 497.0

[node name="btn_home_1_player" type="Button" parent="Map Home"]
margin_right = 281.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Home - Billiard"

[node name="btn_home_1_player2" type="Button" parent="Map Home"]
margin_top = 54.0
margin_right = 281.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Home - Bulan"

[node name="btn_home_1_player3" type="Button" parent="Map Home"]
margin_top = 108.0
margin_right = 281.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Home - Golf"

[node name="btn_home_1_player4" type="Button" parent="Map Home"]
margin_top = 162.0
margin_right = 281.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Home - Soccer"

[node name="btn_home_1_player5" type="Button" parent="Map Home"]
margin_top = 216.0
margin_right = 281.0
margin_bottom = 266.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Home - Voly"

[node name="btn_home_1_player6" type="Button" parent="Map Home"]
margin_top = 270.0
margin_right = 281.0
margin_bottom = 320.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Home - World"

[connection signal="pressed" from="Map Mountain/btn_training_1_player" to="." method="_on_btn_training_1_player_pressed"]
[connection signal="pressed" from="Map Mountain/btn_training_1_player2" to="." method="_on_btn_training_1_player2_pressed"]
[connection signal="pressed" from="Map Mountain/btn_training_1_player3" to="." method="_on_btn_training_1_player3_pressed"]
[connection signal="pressed" from="Map Mountain/btn_training_1_player4" to="." method="_on_btn_training_1_player4_pressed"]
[connection signal="pressed" from="Map Mountain/btn_training_1_player5" to="." method="_on_btn_training_1_player5_pressed"]
[connection signal="pressed" from="Map Mountain/btn_training_1_player6" to="." method="_on_btn_training_1_player6_pressed"]
[connection signal="pressed" from="Map Fantasy/btn_fantasy_1_player" to="." method="_on_btn_fantasy_1_player_pressed"]
[connection signal="pressed" from="Map Fantasy/btn_fantasy_1_player2" to="." method="_on_btn_fantasy_1_player2_pressed"]
[connection signal="pressed" from="Map Fantasy/btn_fantasy_1_player3" to="." method="_on_btn_fantasy_1_player3_pressed"]
[connection signal="pressed" from="Map Fantasy/btn_fantasy_1_player4" to="." method="_on_btn_fantasy_1_player4_pressed"]
[connection signal="pressed" from="Map Fantasy/btn_fantasy_1_player5" to="." method="_on_btn_fantasy_1_player5_pressed"]
[connection signal="pressed" from="Map Fantasy/btn_fantasy_1_player6" to="." method="_on_btn_fantasy_1_player6_pressed"]
[connection signal="pressed" from="Map Home/btn_home_1_player" to="." method="_on_btn_home_1_player_pressed"]
[connection signal="pressed" from="Map Home/btn_home_1_player2" to="." method="_on_btn_home_1_player2_pressed"]
[connection signal="pressed" from="Map Home/btn_home_1_player3" to="." method="_on_btn_home_1_player3_pressed"]
[connection signal="pressed" from="Map Home/btn_home_1_player4" to="." method="_on_btn_home_1_player4_pressed"]
[connection signal="pressed" from="Map Home/btn_home_1_player5" to="." method="_on_btn_home_1_player5_pressed"]
[connection signal="pressed" from="Map Home/btn_home_1_player6" to="." method="_on_btn_home_1_player6_pressed"]
